# api/src/http/routes/create-goal.ts
@@ -10,6 +10,7 @@ export const createGoalRoute: FastifyPluginAsyncZod = async app => {
       onRequest: [authenticateUserHook],
       schema: {
         tags: ['goals'],
+        operationId: 'createGoal',
         description: 'Create a goal',
         body: z.object({
           title: z.string(),
