# api/src/http/routes/get-profile.ts
@@ -8,6 +8,7 @@ export const getProfileRoute: FastifyPluginAsyncZod = async app => {
     {
       schema: {
         tags: ['auth'],
+        operationId: 'getProfile',
         description: 'Get authenticated user profile',
         response: {
           200: z.object({
